Revert "4 tasks solved"
This reverts commit 7fd655138c413ce887380f11b2333d650102b08a.