@@ -4,7 +4,6 @@ import org.springframework.validation.BindingResult;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * @author Yarullin Renat
@@ -15,10 +14,10 @@ public class ErrorUtils {
         if (bindingResult.hasErrors()) {
             errors = bindingResult.getFieldErrors().stream()
                     .map(fieldError -> ErrorInfo.of(
-                            //fieldError.getField() + "Error",
+                            fieldError.getField() + "Error",
                             fieldError.getDefaultMessage()
                     ))
-                    .collect(Collectors.toList());
+                    .toList();
         }
         return errors;
     }
